tests/errors/interface_extension_missing_field.dang
# A child interface must cover every field its parent interface declares.

interface Named {
  pub name: String!
}

interface Greetable {
  pub greet: String!
}

# Missing: pub greet
interface Greeter implements Named & Greetable {
  pub name: String!
}
